kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coreapi-product
  namespace: rockstar
  labels:
    app: coreapi-product
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coreapi-product
  template:
    metadata:
      labels:
        app: coreapi-product
    spec:
      containers:
      - name: coreapi-product
        image: docker-registry.default.svc:5000/rockstar/coreapi-product:0.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
